@@ -1,3 +1,9 @@
+Unreleased changes:
+Produced by Jim Shore.  Not yet released.
+	* Modified fixture instantiation to use ThreadContextClassLoader.  Contributed by Patrick Gerken.
+	* Other changes, not yet documented.
+
+
 Changes in Fit-Java 1.1:
 Produced by Jim Shore.  Released 7 April 2004.
     * Updated for Fit Spec v1.1.  Contributed by Jim Shore.
